--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://duynhannguyenn:duynahn123@cluster0.1n5jzhc.mongodb.net/?retryWrites=true&w=majority
 PORT = 3001
+SECRET_KEY = MAYME-FULLSTACK-APP
+JWT_EXPIRES_TIME = 300s
