handle upload image to local server multer

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGO_URI=mongodb+srv://duynhannguyenn:duynahn123@cluster0.1n5jzhc.mongodb.net/?
 PORT = 3001
 NODE_ENV = development
 SECRET_KEY = MAYME-FULLSTACK-APP
-JWT_EXPIRES_TIME = 300s
+JWT_EXPIRES_TIME = 24h
