handle create dish and add image to db

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ PORT = 3001
 NODE_ENV = development
 SECRET_KEY = MAYME-FULLSTACK-APP
 JWT_EXPIRES_TIME = 24h
+CLOUDINARY_CLOUDNAME= danjejl1g
+CLOUDINARY_APIKEY = 728177551896736
+CLOUDINARY_APISECRET=d8kOupnLF6jkI-wliuM27oFYTHA
