--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.1.0",
+    "mongodb": "^5.1.0",
     "multer": "^1.4.5-lts.1",
+    "node": "^21.1.0",
     "nodemon": "^3.0.1",
     "yup": "^1.3.2"
   },
